release: 1.0.6 (#32)
* feat: 무중단 배포 구현 (#29)

* chore: 고정된 버전으로 변경

* feat: blue-green 방식 무중단 배포 구현

* fix: prometheus 재시작 설정

* fix: 502 대응 - upstream 분리, service-url.inc 추가, nginx의 spring의존 삭제

* chore: 파일명 변경

* hotfix: 최초 배포시 동작 추가

* fix: 이름으로 조회 시 학번을 unique하게 반환 (#30)

* chore: 프론트엔드 vercel 배포 변경 대응 (#31)